initial commit for vanilla (v2.2) branch